# NextStep

./: project.yml
.build/: build.db  debug.yaml
.build/arm64-apple-macosx/debug/: description.json
.build/arm64-apple-macosx/debug/ModuleCache/: MetalKit-5NPUV16X7UN5.swiftmodule  PencilKit-15IC01MOX92Z5.swiftmodule  PencilKit-1VQKIXGC3XRTE.swiftmodule
.build/arm64-apple-macosx/debug/ModuleCache/3MZ67M5JOVXTF/: Accessibility-RCJSN2GG3RAR.pcm  (+58 more)
.build/arm64-apple-macosx/debug/NextStepApp.build/: NextStepApp.emit-module.d  output-file-map.json  primary.priors  sources
Ayush_Changes/: auto_validation_changes.md  setup_summary.md
Backend/: pyproject.toml
Backend/app/: config.py  deepseek_client.py  main.py  models.py  prompts.py  routes.py
NextStep/: Info.plist
NextStep.xcodeproj/: project.pbxproj
NextStep.xcodeproj/project.xcworkspace/xcuserdata/arnav.xcuserdatad/: UserInterfaceState.xcuserstate
NextStep.xcodeproj/project.xcworkspace/xcuserdata/ayushsharma.xcuserdatad/: UserInterfaceState.xcuserstate
NextStep/App/: NextStepApp.swift
NextStep/Models/: Block.swift  ValidatedStep.swift
NextStep/Resources/: DesignSystem.swift
NextStep/Services/: AIService.swift  PersistenceService.swift  TextRecognitionService.swift
NextStep/ViewModels/: CanvasViewModel.swift
NextStep/Views/: ContentView.swift
NextStep/Views/AIPanel/: AIHintCard.swift  AIPanelView.swift
NextStep/Views/Canvas/: CanvasView.swift
NextStep/Views/Components/: PencilKitView.swift  QuestionReviewView.swift  ScannerView.swift  SolveNewSelectionView.swift  WriteQuestionView.swift
(+237 files in other folders)
